chore: change settings

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,21 @@
-# Uncomment the following lines to enable the Corne RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+# Enable RGB Underglow (if supported in your fork)
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
 
-# Uncomment the following line to enable the Corne OLED Display
-# CONFIG_ZMK_DISPLAY=y
+# Enable OLED Display
+CONFIG_ZMK_DISPLAY=y
+
+# Disable Bluetooth
+CONFIG_BT=n
+CONFIG_ZMK_BLE=n
+
+# Enable USB
+CONFIG_ZMK_USB=y
+CONFIG_USB_DEVICE_STACK=y
+
+# Enable Split Communication via Serial
+CONFIG_ZMK_SPLIT=y
+
+# Enable Settings Backend
+CONFIG_SETTINGS=y
+CONFIG_SETTINGS_NVS=y
