--- a/config/corne.conf
+++ b/config/corne.conf
@@ -9,5 +9,6 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_USB=y
 CONFIG_USB_DEVICE_STACK=y
 
-
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
