--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,8 +6,8 @@ CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_DISPLAY=y
 
 # Enable USB
-CONFIG_ZMK_USB=y
-CONFIG_USB_DEVICE_STACK=y
+# CONFIG_ZMK_USB=y
+# CONFIG_USB_DEVICE_STACK=y
 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
