--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,11 +4,17 @@ CONFIG_WS2812_STRIP=y
 
 # Enable OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_BACKLIGHT=y                # Enables LED backlight
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=y   #Turn off backlight when USB is disconnected
+
+CONFIG_ZMK_BATTERY_REPORTING=y        # Enables/disables all battery level detection/reporting
 
 # Enable USB
 # CONFIG_ZMK_USB=y
 # CONFIG_USB_DEVICE_STACK=y
 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
+
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
