fix: remove backlight

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,8 +4,8 @@ CONFIG_WS2812_STRIP=y
 
 # Enable OLED Display
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_BACKLIGHT=y                # Enables LED backlight
-CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=y   #Turn off backlight when USB is disconnected
+# CONFIG_ZMK_BACKLIGHT=y                # Enables LED backlight
+# CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=y   #Turn off backlight when USB is disconnected
 
 CONFIG_ZMK_BATTERY_REPORTING=y        # Enables/disables all battery level detection/reporting
 
