chore: fix BT pin

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,17 +4,22 @@ CONFIG_WS2812_STRIP=y
 
 # Enable OLED Display
 CONFIG_ZMK_DISPLAY=y
-# CONFIG_ZMK_BACKLIGHT=y                # Enables LED backlight
-# CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=y   #Turn off backlight when USB is disconnected
 
-CONFIG_ZMK_BATTERY_REPORTING=y        # Enables/disables all battery level detection/reporting
+# Enable eager debouncing
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 
 # Enable USB
 # CONFIG_ZMK_USB=y
 # CONFIG_USB_DEVICE_STACK=y
 
+# OTHERS
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
-
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+
+# DEBUG
+CONFIG_ZMK_USB_LOGGING=y      # Enables USB Logging (this increases power usage by a significant amount, turn it off when not in use)
+CONFIG_LOG=y
+CONFIG_LOG_DEFAULT_LEVEL=4    # 0=none, 1=error, 2=warning, 3=info, 4=debug
