--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,9 @@
 # Enable RGB Underglow (if supported in your fork)
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=248
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50
 
 # Enable OLED Display
 CONFIG_ZMK_DISPLAY=y
@@ -13,13 +16,10 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 # CONFIG_ZMK_USB=y
 # CONFIG_USB_DEVICE_STACK=y
 
-# OTHERS
+# BLUETOOTH
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
-CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
-# DEBUG
-CONFIG_ZMK_USB_LOGGING=y      # Enables USB Logging (this increases power usage by a significant amount, turn it off when not in use)
-CONFIG_LOG=y
-CONFIG_LOG_DEFAULT_LEVEL=4    # 0=none, 1=error, 2=warning, 3=info, 4=debug
+#EXT POWER
+CONFIG_ZMK_EXT_POWER=y
