--- a/config/corne.conf
+++ b/config/corne.conf
@@ -19,7 +19,8 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 # BLUETOOTH
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_BT_CTLR_PHY_2M=n
+# CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
 #EXT POWER
 CONFIG_ZMK_EXT_POWER=y
