--- a/config/corne.conf
+++ b/config/corne.conf
@@ -16,11 +16,16 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 # CONFIG_ZMK_USB=y
 # CONFIG_USB_DEVICE_STACK=y
 
+# Configure ability to sleep
+CONFIG_ZMK_SLEEP=n
+
 # BLUETOOTH
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT=y
+CONFIG_ZMK_BLE=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y # Allow higher TX power of nRF52840 chip for nice!nano
 CONFIG_BT_CTLR_PHY_2M=n
-# CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
 #EXT POWER
 CONFIG_ZMK_EXT_POWER=y
