--- a/config/corne.conf
+++ b/config/corne.conf
@@ -13,8 +13,8 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 
 # Enable USB
-# CONFIG_ZMK_USB=y
-# CONFIG_USB_DEVICE_STACK=y
+CONFIG_ZMK_USB=n
+CONFIG_USB_DEVICE_STACK=n
 
 # Configure ability to sleep
 CONFIG_ZMK_SLEEP=n
@@ -22,6 +22,7 @@ CONFIG_ZMK_SLEEP=n
 # BLUETOOTH
 CONFIG_BT=y
 CONFIG_ZMK_BLE=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y # Allow higher TX power of nRF52840 chip for nice!nano
 CONFIG_BT_CTLR_PHY_2M=n
