--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,6 +5,11 @@ CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=248
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50
 
+# Enable Split Keyboard
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_USB=n  # Disable USB for right side
+CONFIG_ZMK_SPLIT_BLE=y  # Enable Bluetooth for right side
+
 # Enable OLED Display
 CONFIG_ZMK_DISPLAY=y
 
