--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,3 +1,6 @@
+# Change board name
+CONFIG_ZMK_KEYBOARD_NAME="Corne Keyboard"
+
 # Enable RGB Underglow (if supported in your fork)
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
