--- a/config/corne.conf
+++ b/config/corne.conf
@@ -13,7 +13,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=25
 # CONFIG_ZMK_SPLIT_BLE=y  # Enable Bluetooth for right side
 
 # # Enable OLED Display
-# CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
 
 # # Enable eager debouncing
 # CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
@@ -31,7 +31,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=25
 # CONFIG_ZMK_BLE=y
 # CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 # CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
-# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y # Allow higher TX power of nRF52840 chip for nice!nano
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y # Allow higher TX power of nRF52840 chip for nice!nano
 
 # #EXT POWER
 # CONFIG_ZMK_EXT_POWER=y
