--- a/config/corne.conf
+++ b/config/corne.conf
@@ -8,30 +8,22 @@ CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=248
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=25
 
-# # Enable Split Keyboard
-# CONFIG_ZMK_SPLIT=y
-# CONFIG_ZMK_SPLIT_BLE=y  # Enable Bluetooth for right side
-
-# # Enable OLED Display
+# Enable OLED Display
 CONFIG_ZMK_DISPLAY=y
 
-# # Enable eager debouncing
-# CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
-# CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
+# Enable USB
+CONFIG_ZMK_USB=n
 
-# # Enable USB
-# CONFIG_ZMK_USB=n
-# CONFIG_USB_DEVICE_STACK=n
-
-# # Configure ability to sleep
-# CONFIG_ZMK_SLEEP=n
-
-# # BLUETOOTH
+# BLUETOOTH
 # CONFIG_BT=y
 # CONFIG_ZMK_BLE=y
 # CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
-# CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y # Allow higher TX power of nRF52840 chip for nice!nano
 
-# #EXT POWER
-# CONFIG_ZMK_EXT_POWER=y
+
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_BLE=y
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=y
+CONFIG_ZMK_SPLIT_PERIPHERAL_HID_INDICATORS=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
