--- a/config/corne.conf
+++ b/config/corne.conf
@@ -23,6 +23,6 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y # Allow higher TX power of nRF52840 chip for nice
 
 CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_SPLIT_BLE=y
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 CONFIG_ZMK_SPLIT_PERIPHERAL_HID_INDICATORS=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
