--- a/config/corne.conf
+++ b/config/corne.conf
@@ -12,7 +12,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=25
 CONFIG_ZMK_DISPLAY=y
 
 # Enable USB
-CONFIG_ZMK_USB=n
+CONFIG_ZMK_USB=y
 
 # BLUETOOTH
 CONFIG_ZMK_BLE=y
