--- a/config/corne.conf
+++ b/config/corne.conf
@@ -12,11 +12,8 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=25
 CONFIG_ZMK_DISPLAY=y
 
 # Enable USB
-CONFIG_ZMK_USB=y
+CONFIG_ZMK_USB=n
 
 # BLUETOOTH
-CONFIG_ZMK_BLE=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
-CONFIG_ZMK_SPLIT_PERIPHERAL_HID_INDICATORS=y
-
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y # Allow higher TX power of nRF52840 chip for nice!nano
