--- a/config/corne.conf
+++ b/config/corne.conf
@@ -17,3 +17,16 @@ CONFIG_ZMK_USB=n
 # BLUETOOTH
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y # Allow higher TX power of nRF52840 chip for nice!nano
+
+
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
+
+
+# Turn on logging, and set ZMK logging to debug output
+CONFIG_ZMK_USB_LOGGING=y
+CONFIG_ZMK_STUDIO_LOCKING=y
+
+# Enable 32kHz crystal
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_30PPM=y
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
