--- a/config/corne.conf
+++ b/config/corne.conf
@@ -25,6 +25,7 @@ CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
 # Turn on logging, and set ZMK logging to debug output
 CONFIG_ZMK_USB_LOGGING=y
 CONFIG_ZMK_STUDIO_LOCKING=y
+CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
 
 # Enable 32kHz crystal
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
