--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,8 +2,8 @@
 CONFIG_ZMK_KEYBOARD_NAME="Corne Keyboard"
 
 # Enable RGB Underglow (if supported in your fork)
-CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=248
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=25
@@ -11,23 +11,21 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=25
 # Enable OLED Display
 CONFIG_ZMK_DISPLAY=y
 
-# Enable USB
+# Enable/disable USB
 CONFIG_ZMK_USB=n
 
 # BLUETOOTH
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y # Allow higher TX power of nRF52840 chip for nice!nano
 
-
-CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
-
-
-# Turn on logging, and set ZMK logging to debug output
-CONFIG_ZMK_USB_LOGGING=y
-CONFIG_ZMK_STUDIO_LOCKING=y
-CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
+# Allow higher TX power of nRF52840 chip for nice!nano
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y 
 
 # Enable 32kHz crystal
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_30PPM=y
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
+
+# Turn on logging, and set ZMK logging to debug output
+# CONFIG_ZMK_USB_LOGGING=y
+# CONFIG_ZMK_STUDIO_LOCKING=y
+# CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
