--- a/config/corne.conf
+++ b/config/corne.conf
@@ -21,9 +21,12 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y 
 
 # Enable 32kHz crystal
-CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
-CONFIG_CLOCK_CONTROL_NRF_K32SRC_30PPM=y
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
+
+#If your device uses BLE and includes an external crystal oscillator with 30 PPM accuracy,
+#your configuration might look like this:
+#CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
+#CONFIG_CLOCK_CONTROL_NRF_K32SRC_30PPM=y
 
 # Turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=y
