--- a/boards/shields/corne_thinkpad/corne_thinkpad.zmk.yml
+++ b/boards/shields/corne_thinkpad/corne_thinkpad.zmk.yml
@@ -1,6 +1,6 @@
 file_format: "1"
-id: corne
-name: Corne
+id: corne_thinkpad
+name: Corne Thinkpad
 type: shield
 url: https://github.com/foostan/crkbd/
 requires: [pro_micro]
@@ -11,5 +11,5 @@ features:
   - underglow
   - studio
 siblings:
-  - corne_left
-  - corne_right
+  - corne_thinkpad_left
+  - corne_thinkpad_right
