--- a/build.yaml
+++ b/build.yaml
@@ -20,10 +20,10 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: corne_left
+    shield: corne_thinkpad_left
     # snippet: zmk-usb-logging
   - board: nice_nano_v2
-    shield: corne_right
+    shield: corne_thinkpad_right
     # snippet: zmk-usb-logging
   # - board: nice_nano_v2
   #   shield: settings_reset
