--- a/build.yaml
+++ b/build.yaml
@@ -25,14 +25,14 @@ include:
 
   # Alternative PINs firmware
   # This builds an additional firmware for the right half that overrides the
-  # pins configured in `corne_tp_right.overlay` and creates a firmware that
+  # pins configured in `corne_thinkpad_right.overlay` and creates a firmware that
   # uses the high frequency pins D1 for SCL and D2 for SDA.
   #
   # You can remove this entry in your own zmk-config.
-  - board: nice_nano_v2
-    shield: corne_thinkpad_right
-    cmake-args: -DDTS_EXTRA_CPPFLAGS=-DMOUSE_PS2_ALT_PINS
-    artifact-name: corne_thinkpad_right-nice_nano_v2-scl_D1_sda_D0-zmk
+  # - board: nice_nano_v2
+  #   shield: corne_thinkpad_right
+  #   cmake-args: -DDTS_EXTRA_CPPFLAGS=-DMOUSE_PS2_ALT_PINS
+  #   artifact-name: corne_thinkpad_right-nice_nano_v2-scl_D1_sda_D0-zmk
 
   # Settings Reset firmware
   # This will build a firmware that can wipe all settings from your
