--- a/config/corne_thinkpad.conf
+++ b/config/corne_thinkpad.conf
@@ -1,33 +1,15 @@
 # Change board name
-CONFIG_ZMK_KEYBOARD_NAME="Corne Keyboard"
+CONFIG_ZMK_KEYBOARD_NAME="Corne Thinkpad"
 
 # Enable RGB Underglow (if supported in your fork)
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=248
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=25
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=250
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=10
 
 # Enable OLED Display
-CONFIG_ZMK_DISPLAY=y
-
-# Enable/disable USB
-CONFIG_ZMK_USB=n
-
-# BLUETOOTH
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
-
-# Allow higher TX power of nRF52840 chip for nice!nano
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y 
-
-# Enable 32kHz crystal
-CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
-
-#If your device uses BLE and includes an external crystal oscillator with 30 PPM accuracy,
-#your configuration might look like this:
-#CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
-#CONFIG_CLOCK_CONTROL_NRF_K32SRC_30PPM=y
-
+# CONFIG_ZMK_DISPLAY=y
 
 #
 # Logging
@@ -83,6 +65,8 @@ CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=3000
 # this.
 # CONFIG_PS2_GPIO_ENABLE_PS2_RESEND_CALLBACK=y
 # CONFIG_PS2_UART_ENABLE_PS2_RESEND_CALLBACK=y
+
+
 #
 # System Settings
 #
@@ -91,5 +75,20 @@ CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=3000
 # Only use this setting for debugging.
 # Prolonged use can lead to flash chip degradation
 # CONFIG_ZMK_SETTINGS_SAVE_DEBOUNCE 10000
+
+# Enable/disable USB
+CONFIG_ZMK_USB=n
+
 # Enable experimental BLE settings
-# CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+
+# Allow higher TX power of nRF52840 chip for nice!nano
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y 
+
+# Enable 32kHz crystal
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
+
+#If your device uses BLE and includes an external crystal oscillator with 30 PPM accuracy,
+#your configuration might look like this:
+#CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
+#CONFIG_CLOCK_CONTROL_NRF_K32SRC_30PPM=y
