chore: add sleep timeout

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -23,6 +23,9 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # Enable 32kHz crystal
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
 
+# Enable deep sleep support
+CONFIG_ZMK_SLEEP=y
+
 #If your device uses BLE and includes an external crystal oscillator with 30 PPM accuracy,
 #your configuration might look like this:
 #CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
