chore: add battery levels

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -26,6 +26,10 @@ CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
 # Enable deep sleep support
 CONFIG_ZMK_SLEEP=y
 
+# Battery levels
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+
 #If your device uses BLE and includes an external crystal oscillator with 30 PPM accuracy,
 #your configuration might look like this:
 #CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
