--- a/config/corne.conf
+++ b/config/corne.conf
@@ -10,6 +10,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=10
 
 # Enable OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
 # Enable/disable USB
 CONFIG_ZMK_USB=n
@@ -27,13 +28,14 @@ CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
 CONFIG_ZMK_SLEEP=y
 
 # Battery levels
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
-#If your device uses BLE and includes an external crystal oscillator with 30 PPM accuracy,
-#your configuration might look like this:
-#CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
-#CONFIG_CLOCK_CONTROL_NRF_K32SRC_30PPM=y
+# If your device uses BLE and includes an external crystal oscillator with 30 PPM accuracy,
+# your configuration might look like this:
+# CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
+# CONFIG_CLOCK_CONTROL_NRF_K32SRC_30PPM=y
 
 # Turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=y
