--- a/config/corne.conf
+++ b/config/corne.conf
@@ -7,6 +7,7 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=250
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=10
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
 # Enable OLED Display
 CONFIG_ZMK_DISPLAY=y
