--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,8 +5,8 @@ CONFIG_ZMK_KEYBOARD_NAME="Corne Keyboard"
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=250
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=10
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=35
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=5
 
 # Enable OLED Display
 CONFIG_ZMK_DISPLAY=y
@@ -24,9 +24,10 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
 
 # Battery levels
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
+# CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 # If your device uses BLE and includes an external crystal oscillator with 30 PPM accuracy,
 # your configuration might look like this:
