--- a/config/corne.conf
+++ b/config/corne.conf
@@ -11,14 +11,17 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=5
 # Enable OLED Display
 CONFIG_ZMK_DISPLAY=y
 
-# Enable/disable USB
-CONFIG_ZMK_USB=n
+# Enable ZMK as a USB keyboard
+CONFIG_ZMK_USB=y
 
 # BLUETOOTH
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+
+# Enable ZMK as a Bluetooth keyboard
+CONFIG_ZMK_BLE=n
+# CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
 # Allow higher TX power of nRF52840 chip for nice!nano
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y 
+# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Enable 32kHz crystal
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
