--- a/config/corne.conf
+++ b/config/corne.conf
@@ -14,14 +14,14 @@ CONFIG_ZMK_DISPLAY=y
 # Enable ZMK as a USB keyboard
 CONFIG_ZMK_USB=y
 
-# BLUETOOTH
+# Enable calculating words per minute
+CONFIG_ZMK_WPM=y
 
-# Enable ZMK as a Bluetooth keyboard
-CONFIG_ZMK_BLE=n
-# CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+# BLUETOOTH
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
 # Allow higher TX power of nRF52840 chip for nice!nano
-# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Enable 32kHz crystal
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
